Modified the analysis program

--- a/citi-bike-data-analysis.ipynb
+++ b/citi-bike-data-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -60,18 +60,18 @@
     "\n",
     "for station in unique_station_leaving:\n",
     "    if not station in counts:\n",
-    "        counts[station] = {'entering':0, 'leaving':0, 'difference':0, 'name':station}\n",
+    "        counts[station] = {'entering':0, 'leaving':0, 'difference':0}\n",
     "    counts[station]['leaving'] = station_leaving.count(station)\n",
     "\n",
     "for station in unique_station_entering:\n",
     "    if not station in counts:\n",
-    "        counts[station] = {'entering':0, 'leaving':0, 'difference':0, 'name':station}\n",
+    "        counts[station] = {'entering':0, 'leaving':0, 'difference':0}\n",
     "    counts[station]['entering'] = station_entering.count(station) \n",
     "\n",
     "data_list = []\n",
     "for station in counts:\n",
     "    counts[station]['difference'] = int(counts[station]['entering']) - int(counts[station]['leaving'])\n",
-    "    data_list.append((counts[station]['difference'], counts[station]['name']))\n",
+    "    data_list.append((counts[station]['difference'], station))\n",
     "\n",
     "data_sorted = sorted(data_list, key = getkey)\n",
     "\n",
