Modified the analysis program

--- a/citi-bike-data-analysis.ipynb
+++ b/citi-bike-data-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -13,29 +13,29 @@
      "text": [
       "10 stations may need more pre-set bikes:\n",
       "\n",
-      "PABT Valet   -23\n",
-      "Penn Station Valet   -15\n",
-      "Broadway & W 55 St   -14\n",
-      "E 7 St & Avenue A   -14\n",
-      "Pershing Square South   -14\n",
-      "Bialystoker Pl & Delancey St   -10\n",
-      "Allen St & E Houston St   -10\n",
-      "Clark St & Henry St   -10\n",
-      "Broadway & W 37 St   -9\n",
-      "W 52 St & 9 Ave   -9\n",
+      "PABT Valet                          -23\n",
+      "Penn Station Valet                  -15\n",
+      "Broadway & W 55 St                  -14\n",
+      "E 7 St & Avenue A                   -14\n",
+      "Pershing Square South               -14\n",
+      "Bialystoker Pl & Delancey St        -10\n",
+      "Allen St & E Houston St             -10\n",
+      "Clark St & Henry St                 -10\n",
+      "Broadway & W 37 St                  -9\n",
+      "W 52 St & 9 Ave                     -9\n",
       "\n",
       "10 stations may need bigger sizes:\n",
       "\n",
-      "W 33 St & 7 Ave   20\n",
-      "W 41 St & 8 Ave   19\n",
-      "DeKalb Ave & Hudson Ave   19\n",
-      "12 Ave & W 40 St   15\n",
-      "Greenwich St & Warren St   12\n",
-      "E 6 St & Avenue B   11\n",
-      "Pearl St & Hanover Square   11\n",
-      "W Broadway & Spring St   10\n",
-      "Greenwich Ave & 8 Ave   8\n",
-      "E 17 St & Broadway   7\n"
+      "W 33 St & 7 Ave                     20\n",
+      "W 41 St & 8 Ave                     19\n",
+      "DeKalb Ave & Hudson Ave             19\n",
+      "12 Ave & W 40 St                    15\n",
+      "Greenwich St & Warren St            12\n",
+      "E 6 St & Avenue B                   11\n",
+      "Pearl St & Hanover Square           11\n",
+      "W Broadway & Spring St              10\n",
+      "Greenwich Ave & 8 Ave               8\n",
+      "E 17 St & Broadway                  7\n"
      ]
     }
    ],
@@ -78,13 +78,13 @@
     "print(\"10 stations may need more pre-set bikes:\")\n",
     "print(\"\")\n",
     "for i in range(10):\n",
-    "    print (data_sorted[i][1], ' ', round(data_sorted[i][0] / 30))\n",
+    "    print (\"%-35s %d\" % (data_sorted[i][1], round(data_sorted[i][0] / 30)))\n",
     "\n",
     "print(\"\")\n",
     "print(\"10 stations may need bigger sizes:\")\n",
     "print(\"\")\n",
     "for i in range(10):\n",
-    "    print (data_sorted[len(data_sorted) - i - 1][1], ' ', round(data_sorted[len(data_sorted) - i - 1][0] / 30))\n"
+    "    print (\"%-35s %d\" % (data_sorted[len(data_sorted) - i - 1][1],round(data_sorted[len(data_sorted) - i - 1][0] / 30)))\n"
    ]
   },
   {
